--- a/senguo.cc/admin/templates/bbs/main.html
+++ b/senguo.cc/admin/templates/bbs/main.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="wrap-main group">
     <div class="wrap-right fr">
-        <a href="javascript:;" url="/bbs/publish" class="publish-box"></a>
+        <a href="javascript:;" url="/bbs/publish" class="publish-box" id="go_publish"></a>
         <div class="aside-box box-border mt10">
             <p class="aside-title"><span>热门文章</span></p>
             <ul class="aside-list">
