--- a/senguo.cc/admin/templates/bbs/base.html
+++ b/senguo.cc/admin/templates/bbs/base.html
@@ -48,14 +48,14 @@
                 <a href="/bbs" class="logo-sg"></a>
                 <div class="wrap-search">
                     <input type="text" class="search-input" id="search_bbs" placeholder="请输入文章标题关键字"/>
-                    <a href="javascript:;" class="search-btn"></a>
+                    <a href="javascript:;" class="search-btn" id="search_btn"></a>
                 </div>
             </div>
         </div>
         <div class="wrap-nav">
             <ul class="nav-list w980 group">
                 <li>
-                    <a class="active" href="/bbs">首页</a>
+                    <a class="active" href="javascript:;" data-id="100">首页</a>
                 </li>
                 <li>
                     <a href="javascript:;" data-id="0">官方公告</a>
