--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -351,6 +351,10 @@
                     <a href="javascript:;" class="add-item-list" id="add-img-btn">+</a>
                 </li>
             </ul>
+            <ul>
+                <li>图片库</li>
+                <li>系统默认图片</li>
+            </ul>
             <p class="group mt10"><span class="c333">森果图片库 : </span><span class="red-txt goods-classify-txt">苹果</span></p>
             <ul class="item-img-lst group sg-img-list">
                 <li class="img-bo" id="demo-img">
