--- a/senguo.cc/admin/templates/bbs/base.html
+++ b/senguo.cc/admin/templates/bbs/base.html
@@ -109,6 +109,36 @@
             </li>
         </ul>
     </div>
+    <div class="scrollUpf">
+        <a href="javascript:;" title="返回顶部" id="scrollUp" class="scrollUp"></a>
+        <a title="森果服务号" href="javascript:;" id="r-wx" class="r-wx">
+            <div id="fi-wx-show" class="fi-wx-show">
+                <div class="wx-show-txt"></div>
+                <div class="wx-threeRs"></div>
+                <div class="wx-threeR"></div>
+            </div>
+            <div class="iopa"></div>
+        </a>
+        <a class="r-kf" href="javascript:;" title="森果客服">
+            <div class="fi-kf-show">
+                <p>客服电话：15527163904</p>
+                <p>客服微信：senguocc100</p>
+                <p>客服QQ：947201495</p>
+                <div class="wx-threeRs"></div>
+                <div class="wx-threeR"></div>
+            </div>
+            <div class="iokf"></div>
+        </a>
+    </div>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?935e8ca3a37798305258305ac7a9f24f";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/template.js"></script>
 <script type="text/javascript" src="/static/bbs/js/util.js"></script>
