--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -351,10 +351,6 @@
                     <a href="javascript:;" class="add-item-list" id="add-img-btn">+</a>
                 </li>
             </ul>
-            <ul>
-                <li>图片库</li>
-                <li>系统默认图片</li>
-            </ul>
             <p class="group mt10"><span class="c333">森果图片库 : </span><span class="red-txt goods-classify-txt">苹果</span></p>
             <ul class="item-img-lst group sg-img-list">
                 <li class="img-bo" id="demo-img">
@@ -367,6 +363,32 @@
         <div class="wrap-pop-btn">
             <a href="javascript:;" class="ok-btn" id="upload-img">确认上传</a>
             <a href="javascript:;" class="cancel-btn">取消</a>
+        </div>
+    </div>
+</div>
+<div class="pop-win">
+     <ul>
+        <li>图片库</li>
+        <li>系统默认图片</li>
+    </ul>
+     <div class="picture-library">
+       <ul class="item-img-lst group picture-list">
+            <li class="img-bo">
+                <div class="img-selected">已选</div>
+                <img src="" alt="商品图片"/>
+                <a class="show-bigimg" data-src="" href="javascript:;">预览大图</a>
+            </li>
+        </ul>
+        <div class="users-pagination list-pagination group pull-right mt0">
+            <ul>
+                <li><a href="javascript:;" class="page-btn pre-page">&nbsp;</a></li>
+                <li>
+                    <span class="picture-now">1</span>/<span class="picture-total">1</span>
+                </li>
+                <li><a href="javascript:;" class="page-btn next-page">&nbsp;</a></li>
+                <li><input class="input-page form-control" type="text" placeholder="输入页码"></li>
+                <li><a href="javascript:;" class="jump-to">跳转</a></li>
+            </ul>
         </div>
     </div>
 </div>
