--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -366,11 +366,12 @@
         </div>
     </div>
 </div>
-<div class="pop-win">
+<div class="pop-win pop-picture-library">
      <ul>
         <li>图片库</li>
         <li>系统默认图片</li>
     </ul>
+    <button id="upload-picture">本地上传</button>
      <div class="picture-library">
        <ul class="item-img-lst group picture-list">
             <li class="img-bo">
@@ -390,6 +391,9 @@
                 <li><a href="javascript:;" class="jump-to">跳转</a></li>
             </ul>
         </div>
+    </div>
+     <div class="wrap-pop-btn">
+        <a href="javascript:;" class="cancel-btn">取消</a>
     </div>
 </div>
 <div class="pop-win pop-editor">
