--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -177,7 +177,7 @@ img{border:none;}
 .list-pagination .next-page:hover{background-color:#f4f5f9;}
 .list-pagination .next-page:focus{background-color:#f4f5f9;}
 .list-pagination .input-page{;width:60px;height:26px;border:1px solid #ccc;border-radius:1px;color:#999;text-align:center;text-indent:0;}
-.list-pagination .jump-to{display:inline-block;width:60px;height:26px;border:1px solid #ccc;border-radius:1px;text-align:center;color:#666;line-height:26px;}
+.list-pagination .jump-to{display:inline-block;float:left;width:60px;height:26px;border:1px solid #ccc;border-radius:1px;text-align:center;color:#666;line-height:26px;}
 
 /*弹出框公共样式*/
 .modal-header{background:#f2f2f2;font-size:14px;}
@@ -239,6 +239,7 @@ img{border:none;}
 .mt0{margin-top: 0 !important;}
 .p0{padding:0 !important;}
 .p10{padding:10px !important;}
+.p15{padding:15px !important;}
 .ml40{margin-left:55px;}
 
 .set-bottom10{margin-bottom:10px;}
@@ -395,3 +396,15 @@ input{color:#333;text-indent:5px;}
 .auth-box{width:450px;margin:0 auto;position:relative;background:#fff;padding:10px;border:1px solid #eee;}
 .auth-box h1{margin-top:10px;font-size:16px !important;margin-left:-105px;position:absolute;left:50%;top:0;background:#fff;line-height:30px;}
 .auth-box iframe{border:none;margin-top:20px;}
+
+.picture-library{padding:20px;margin:10px 0;clear:both;}
+.picture-title{border-bottom:1px solid #ddd;height:50px;}
+.picture-title li{width:100px;text-align:center;float:left;color:#333;}
+.picture-title li.active{color:#44b549;}
+.picture-list{clear:both;width:105%;}
+.picture-list li{float:left;margin:0 26px 15px 0;}
+.picture-list img{width:80px;height:80px;}
+#upload-picture{border-radius:0px;padding:2px 10px;}
+.wrap-sty-box{position: absolute;background: #fff;border: 1px solid #ddd;width:650px;left: 50%;top: 50%;-webkit-transform:translate(-50%,-50%);z-index:990;}
+.wrap-sty{background-color: #fbfbfb;border-top:1px solid #ddd;padding: 10px 0;text-align: center;clear:both;}
+.wrap-sty>a{display: inline-block;width: 90px;text-align: center;font-size: 14px;height: 28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
