--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -39,7 +39,7 @@
             <span>&nbsp;销量 {{good.saled or 0}}</span>
         </p>
         <p class="goods-info">{{good.intro or ''}}</p>
-        <p class="f12 mt10" id="time_box" end_time="{{end_time}}"><span>距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span></p>
+        <p class="f12 mt10 {% if has_activity>0 and charge['is_seckill']==1 and good.activity_status==1 %}{%else%}hide{%end%}" id="time_box" end_time="{{end_time}}"><span>距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span></p>
     </div>
     <ul class="wrap-choose-goods">
             {% for charge in charge_types %}
