--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -397,14 +397,18 @@ input{color:#333;text-indent:5px;}
 .auth-box h1{margin-top:10px;font-size:16px !important;margin-left:-105px;position:absolute;left:50%;top:0;background:#fff;line-height:30px;}
 .auth-box iframe{border:none;margin-top:20px;}
 
+.pop-win{position: fixed;width: 100%;height: 100%;background-color: rgba(0,0,0,.4);z-index: 1055;top: 0;left:0;display: none;}
 .picture-library{padding:20px;margin:10px 0;clear:both;}
 .picture-title{border-bottom:1px solid #ddd;height:50px;}
 .picture-title li{width:100px;text-align:center;float:left;color:#333;}
 .picture-title li.active{color:#44b549;}
 .picture-list{clear:both;width:105%;}
-.picture-list li{float:left;margin:0 26px 15px 0;}
+.picture-list .img-selected{position: absolute;left: 0;top: 0;width:80px;height:80px;background-color: rgba(0,0,0,.5);color: #fff;text-align: center;line-height:80px;font-size: 12px;display: none;}
+.picture-list li{float:left;margin:0 26px 15px 0;position:relative;}
+.picture-list li:hover{cursor:pointer;}
+.picture-list li:hover .img-selected{display:block;}
 .picture-list img{width:80px;height:80px;}
 #upload-picture{border-radius:0px;padding:2px 10px;}
 .wrap-sty-box{position: absolute;background: #fff;border: 1px solid #ddd;width:650px;left: 50%;top: 50%;-webkit-transform:translate(-50%,-50%);z-index:990;}
 .wrap-sty{background-color: #fbfbfb;border-top:1px solid #ddd;padding: 10px 0;text-align: center;clear:both;}
-.wrap-sty>a{display: inline-block;width: 90px;text-align: center;font-size: 14px;height: 28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
+.wrap-sty>a{display:inline-block;width: 90px;text-align:center;color:#333;font-size:14px;height:28px;line-height: 28px;border-radius: 2px;border: 1px solid #e7e7eb;}
